# the-agora-desktop

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  login_service.rs  main.rs  message_service.rs  users_service.rs  websocket.rs
src/lib/components/: ChatWindow.svelte  MainHeader.svelte  UsersSidebar.svelte
src/lib/stores/: userStores.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/home/: +page.svelte
